Fix background color for dark mode, closes #4

--- a/css/bigfoot-default.css
+++ b/css/bigfoot-default.css
@@ -80,7 +80,7 @@
   box-sizing: border-box;
   max-width: 90%;
   margin: 1.96924em 0;
-  background: #fafafa;
+  background: light-dark(#fafafa, #333);
   opacity: 0;
   border-radius: 0.5em;
   border: 1px solid #c3c3c3;
@@ -167,14 +167,14 @@
   top: -1px;
   height: 1.1em;
   border-radius: 0.5em 0.5em 0 0;
-  background-image: linear-gradient(to bottom, #fafafa 50%, rgba(250, 250, 250, 0) 100%);
+  background-image: linear-gradient(to bottom, light-dark(#fafafa, #333) 50%, rgba(250, 250, 250, 0) 100%);
 }
 
 .bigfoot-footnote.is-scrollable .bigfoot-footnote__wrapper:after {
   bottom: -1px;
   height: 1.2em;
   border-radius: 0 0 0.5em 0.5em;
-  background-image: linear-gradient(to top, #fafafa 50%, rgba(250, 250, 250, 0) 100%);
+  background-image: linear-gradient(to top, light-dark(#fafafa, #333) 50%, rgba(250, 250, 250, 0) 100%);
 }
 
 .bigfoot-footnote.is-scrollable ::-webkit-scrollbar {
@@ -195,7 +195,7 @@
   box-sizing: inherit;
   overflow: hidden;
   margin: 0;
-  background-color: #fafafa;
+  background-color: light-dark(#fafafa, #333);
   border-radius: 0.5em;
   line-height: 0;
 }
@@ -210,7 +210,7 @@
   box-sizing: inherit;
   overflow: auto;
   -webkit-overflow-scrolling: touch;
-  background: #fafafa;
+  background: light-dark(#fafafa, #333);
   border-radius: 0.5em;
   -webkit-font-smoothing: subpixel-antialiased;
   line-height: normal;
@@ -236,7 +236,7 @@
   width: 1.3em;
   height: 1.3em;
   transform: rotate(45deg);
-  background: #fafafa;
+  background: light-dark(#fafafa, #333);
   border: 1px solid #c3c3c3;
   box-shadow: 0px 0px 8px rgba(0, 0, 0, 0.3);
   border-top-left-radius: 0;
